kubernetes/base/fhir-connector-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fhir-connector-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fhir-connector-api
  template:
    metadata:
      labels:
        app: fhir-connector-api
        istioRequireAuthentication: "true"
    spec:
      serviceAccountName: focusing-manager-serviceaccount
      containers:
      - name: fhir-connector-api
        image: gravitate-registry.cr.de-fra.ionos.com/fhir-connector:v0.40.0
        resources: {}
        imagePullPolicy: Always
      restartPolicy: Always
